force-app/main/default/objects/ShiftRequest__c/ShiftRequest__c.object-meta.xml
<CustomObject>
    <label>ShiftRequest</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>ShiftRequest</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ShiftRequests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>