force-app/main/default/objects/ShiftRequest__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>ShiftRequests</relationshipLabel>
    <relationshipName>ShiftRequests</relationshipName>
    <type>Lookup</type>
</CustomField>