force-app/main/default/objects/ShiftRequest__c/fields/RequestedStart__c.field-meta.xml
<CustomField>
    <fullName>RequestedStart__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RequestedStart</label>
    <type>DateTime</type>
</CustomField>