force-app/main/default/objects/ShiftRequest__c/fields/TemplateCode__c.field-meta.xml
<CustomField>
    <fullName>TemplateCode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>TemplateCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>