force-app/main/default/objects/ShiftRequest__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>TemplateCode__c</columns>
    <columns>RequestedStart__c</columns>
    <columns>Status__c</columns>
    <columns>Error__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>